# YDBCurl

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile-rocky  NOTICE  README.md  libcurl.c  libcurl.manifest.json.in  libcurl.xc.in
ci/: needs_copyright.sh
r/: _ut.m  _ut1.m  libcurlPluginTests.m
